--- a/langflow-project/.env
+++ b/langflow-project/.env
@@ -5,3 +5,6 @@ LANGFLOW_DATABASE_URL=sqlite:////data/langflow.db
 # Langfuse (monitoring)
 LANGFUSE_SECRET_KEY=sk-lf-33e9c318-9da6-4554-9aad-4b511892e3a1
 LANGFUSE_PUBLIC_KEY=pk-lf-649e7a49-3fd5-4608-b903-0caf19ff3a3a
+# .env
+LANGFLOW_CONFIG_DIR=/data
+LANGFLOW_SAVE_DB_IN_CONFIG_DIR=true
