Langfuse Host in docker compose OK

--- a/langflow-project/docker-compose.yml
+++ b/langflow-project/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       # Langfuse (si nécessaire)
       - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
       - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY}
+      - LANGFUSE_HOST="https://cloud.langfuse.com"
     networks:
       - langflow-network
     env_file:
