Langfuse Host in .env

--- a/langflow-project/.env
+++ b/langflow-project/.env
@@ -3,8 +3,9 @@ LANGFLOW_HOST=0.0.0.0
 LANGFLOW_DATABASE_URL=sqlite:////data/langflow.db
 
 # Langfuse (monitoring)
-LANGFUSE_SECRET_KEY=sk-lf-33e9c318-9da6-4554-9aad-4b511892e3a1
-LANGFUSE_PUBLIC_KEY=pk-lf-649e7a49-3fd5-4608-b903-0caf19ff3a3a
+LANGFUSE_SECRET_KEY=sk-lf-24003a5d-8532-4d9f-8e90-d9c49aee63e8
+LANGFUSE_PUBLIC_KEY=pk-lf-5ec81bc9-6c0d-4dc7-85ea-2e607847a833
+LANGFUSE_HOST="https://cloud.langfuse.com"
 # .env
 LANGFLOW_CONFIG_DIR=/data
 LANGFLOW_SAVE_DB_IN_CONFIG_DIR=true
